--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
+    "react": "18.3.1",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0"
+    "lucide-react": "0.344.0",
+    "framer-motion": "11.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
